--- a/app/templates/counselor/resources.html
+++ b/app/templates/counselor/resources.html
@@ -9,7 +9,7 @@
 		</div>
 		
 		<div class="middle aligned content">
-			<h4 style="color: blue; font-size: 20px; margin-top: 5px;"> {{ title }} </h4>
+			<h4 style="color: #2AB088; font-size: 20px; margin-top: 5px;"> {{ title }} </h4>
 			<div class="description" style="margin-bottom: 20px;">
 				<p style="color:black"> {{ description }}</p>
 			</div>
