--- a/app/templates/counselor/scholarships.html
+++ b/app/templates/counselor/scholarships.html
@@ -11,7 +11,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                <button class="ui primary button" type="submit">Filter</button>
+                <button class="ui primary button" style="background-color: #2AB088;" type="submit">Filter</button>
             </form>
             <h4 class="ui header">Search</h4>
             <div class="ui input focus">
