--- a/app/templates/counselor/student_profile.html
+++ b/app/templates/counselor/student_profile.html
@@ -46,7 +46,7 @@
   <!-- DISPLAY ACADEMIC INFORMATION -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         <h3>Academic Information</h3>
       </div>
     </div>
@@ -79,7 +79,7 @@
   <!-- DISPLAY TEST SCORES -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Test Scores
       </div>
       <table class="ui compact table">
@@ -128,7 +128,7 @@
   <div class="row">
     <!-- DISPLAY MAJORS -->
     <div class="six wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Majors of Interest
       </div>
       <table class="ui compact table">
@@ -166,7 +166,7 @@
     </div>
     <!-- DISPLAY COLLEGES -->
     <div class="six wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Colleges of Interest
       </div>
       <table class="ui compact table">
@@ -210,10 +210,10 @@
   <!-- DISPLAY ESSAYS -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         <h3>College Application Information</h3>
       </div>
-      <div style="color: #1A85D6;" class="ui horizontal divider">Essays</div>
+      <div style="color: #2AB088;" class="ui horizontal divider">Essays</div>
       <table class="ui compact table">
         <thead class="full-width">
           <th>Essay</th>
@@ -299,7 +299,7 @@
   <!-- DISPLAY RECOMMENDATION LETTERS -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">Recommendation Letters</div>
+      <div style="color: #2AB088;" class="ui horizontal divider">Recommendation Letters</div>
       <table class="ui compact table">
         <thead class="full-width">
           <th>Name</th>
@@ -354,7 +354,7 @@
   <!-- DISPLAY Acceptances -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         <h3>Acceptances</h3>
       </div>
       <table class="ui compact table">
@@ -420,7 +420,7 @@
 <!-- Display Scholarships Awarded -->
 <div class="row">
     <div class="twelve wide column">
-    <div style="color: #1A85D6;" class="ui horizontal divider">Scholarships</div>
+    <div style="color: #2AB088;" class="ui horizontal divider">Scholarships</div>
       <table class="ui compact table">
         <thead class="full-width">
           <th>Name</th>
