--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -41,7 +41,7 @@ table.selectable tr:hover {
   text-align: center;
   text-overflow: ellipsis;
   color: white;
-  background-color: #2D9DDF;
+  background-color:#2AB088;;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   font-size: 30px;
   padding-left: 11px;
@@ -120,7 +120,7 @@ table.selectable tr:hover {
 }
 
 #language_footer{
-  background-color:#2D9DDF;
+  background-color:#2AB088;;
   position:fixed; 
   right: 10px; 
   bottom: 10px; 
