--- a/app/templates/counselor/student_database.html
+++ b/app/templates/counselor/student_database.html
@@ -58,7 +58,7 @@
                     <label>No essays uploaded</label>
                 </div>
                 <br /><br />
-                <button class="ui primary button" type="submit">Filter</button><br /><br />
+                <button class="ui primary button" type="submit" style="background-color: #FF4249;">Filter</button><br /><br />
             </form>
         </div>
         <div class="twelve wide column">
