--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -56,7 +56,7 @@
             <div class="column">
                 <img
                     class="ui centered small circular image"
-                    src="/static/images/ngs_jovani.jpg"
+                    src="{{url_for('static',filename='images/ngs_jovani.jpg')}}"
                 />
                 <h1 class="ui header">Administrators</h1>
                 <p>
@@ -72,7 +72,7 @@
             <div class="column">
                 <img
                   class="ui centered small circular image"
-                  src="/static/images/ngs_sally.jpg"
+                  src="{{url_for('static',filename='images/ngs_sally.jpg')}}"
                   
                 />
                 <h1 class="ui header">Counselors</h1>
@@ -88,7 +88,7 @@
             <div class="column">
                 <img
                   class="ui centered small circular image"
-                  src="/static/images/user-avatar.jpg"
+                  src="{{url_for('static',filename='images/user-avatar.jpg')}}"
                 />
                 <h1 class="ui header">Students</h1>
                 <p>
@@ -125,7 +125,7 @@
                 <div class="six wide right aligned column">
                     <img
                         class="ui image"
-                        src="/static/images/h4i.png"
+                        src="{{url_for('static',filename='images/h4i.png')}}"
                     />
                 </div>
             </div>
