--- a/app/templates/counselor/upload_scattergram.html
+++ b/app/templates/counselor/upload_scattergram.html
@@ -28,7 +28,7 @@
          </p>
          
          <p>
-            <img src="/static/images/app_statuses.png" width="100%" />
+            <img src="{{url_for('static',filename='images/app_statuses.png')}}" width="100%" />
          </p>
          <p>
             For the "Application Status" column, possible entries are:
