--- a/app/templates/counselor/upload_scholarships.html
+++ b/app/templates/counselor/upload_scholarships.html
@@ -57,7 +57,7 @@
             </ol>
          </p>
          <p>
-            <img src="/static/images/scholarship_data.png" width="100%" />
+            <img src="{{url_for('static',filename='images/scholarship_data.png')}}" width="100%" />
          </p>
          <p>
             Enter data as in the sample image above in an excel file.
